--- a/second/src/css/global.css
+++ b/second/src/css/global.css
@@ -19,3 +19,11 @@ h3 {
 a{
   text-decoration: none;
 }
+
+button{
+  padding: 0px;
+  margin: 0px;
+  border: none;
+  background: none;
+  outline: none;
+}
