--- a/second/src/css/filter.css
+++ b/second/src/css/filter.css
@@ -1,7 +1,10 @@
 .filter-block {
+  position: relative;
   height: 87px;
   width: 100%;
   border-bottom: 2px solid #E2E2E2;
+  z-index: 3;
+  background-color: #fff;
 }
 
 .filter-block__filters{
@@ -16,20 +19,25 @@
   align-self: flex-start;
   font-family: "Actor";
   font-size: 24px;
-  line-height: 46px;
-  margin-top: 2px;
+  line-height: 57px;
   margin-right: 38px;
   color: #1C2E36;
 }
 
 .filter-block__selector{
   font-size: 14px;
+  padding-left: 7px;
   line-height: 18px;
   color: #666666;
   height: 55px;
   border: 1px solid #C2C2C2;
   box-sizing: border-box;
   border-radius: 3px;
+  background-image: url("../assets/image/arr1.png");
+  background-repeat: no-repeat;
+  background-position-x: calc(100% - 7px);
+  background-position-y: 50%;
+  background-size: 12px;
 }
 
 .filter-block__selector_name_subcategories{
@@ -59,7 +67,11 @@
   flex-grow: 0;
 }
 
-@media (max-width: 1180px) {
+.filter-block__option{
+  width: 10px;
+}
+
+@media (max-width: 1200px) {
   .filter-block__filters{
     width: 100%;
   }
@@ -77,7 +89,7 @@
    }
 }
 
-@media (max-width: 775px){
+@media (max-width: 760px){
   .filter-block__selector{
     display: none;
   }
@@ -120,7 +132,7 @@
   top: 0px;
   background-color: rgba(0, 0, 0, 0.71);
   height: 100%;
-  z-index: 3;
+  z-index: 4;
 }
 
 .sider-filter-block__filter{
