--- a/second/src/css/filter.css
+++ b/second/src/css/filter.css
@@ -136,6 +136,9 @@
 }
 
 .sider-filter-block__filter{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   width: 273px;
   height: 100%;
   background-color: #fff;
@@ -156,9 +159,7 @@
 
 .sider-filter-block__options{
   display: flex;
-  box-sizing: border-box;
   flex-wrap: wrap;
-  margin-bottom: 17px;
   width: 100%;
   padding: 15px 5px 15px 0px;
 }
@@ -168,13 +169,61 @@
   width: 12px;
   margin-right: 10px;
   align-self: center;
+  background-image: url("../assets/image/check.png");
+  background-size: 12px 12px;
 }
 
 .sider-filter-block__option{
   width: calc(100% - 23px);
-  align-self: center;
   margin-bottom: 20;
   font-size: 16px;
   line-height: 27px;
   color: #1C2E36;
+}
+
+.sider-filter-block__option-ap_state_active{
+  background-image: url("../assets/image/checka.png");
+}
+
+.sider-filter-option__line{
+  width: 13px;
+  height: 4px;
+}
+
+.sider-filter-block__chapt{
+  margin-bottom: 17px;
+  border-bottom: 1px solid #ECECEC;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.sider-filter-block__button-reset, .sider-filter-block__button-go{
+  width: calc(50% - 5px);
+  height: 48px;
+  text-align: center;
+  font-family: "Actor";
+  font-size: 16px;
+  line-height: 19px;
+  color: #0084BA;
+  border: 1px solid #0084BA;
+  border-radius: 3px;
+}
+
+.sider-filter-block__button-go{
+  background: #0084BA;
+  color: #fff;
+}
+
+.sider-filter-block__name-chapt{
+  font-family: "Actor";
+  font-size: 16px;
+  line-height: 25px;
+  width: calc(100% - 100px);
+}
+
+.sider-filter-block__chapt_number_last{
+  border: none;
+  margin-bottom: 18px;
 }
