--- a/4/4/src/layouts/defaultLayout.sass
+++ b/4/4/src/layouts/defaultLayout.sass
@@ -5,6 +5,7 @@
     position: fixed
     width: 100%
     background-color: #222
+    z-index: 3
 
 .main-content
     display: flex
@@ -14,7 +15,7 @@
     position: fixed
     width: 100%
     z-index: -1
-    background: url("../resource/img/background.png")
+    background: url("../img/background.png")
 
 .main-top-indificator
     width: 100%
@@ -34,7 +35,7 @@
 .main-icon
     width: 49.99%
     height: 100%
-    background: url("../resource/img/logo.svg")
+    background: url("../img/logo.svg")
     background-size: 108px 108px
     background-position-x: 50%
     background-repeat: no-repeat
