--- a/4/4/src/modules/news.sass
+++ b/4/4/src/modules/news.sass
@@ -2,8 +2,7 @@
     display: flex
     flex-wrap: wrap
     width: 880px
-    justify-content: center
-    align-items: stretch
+    align-content: flex-start
 
 .news-home
     align-self: center
@@ -12,7 +11,7 @@
 .news-home-button
     width: 102px
     height: 117px
-    background-image: url("../resource/img/arrow_back.png")
+    background-image: url("../img/arrow_back.png")
     background-size: cover
 
 .news-list__caption
@@ -33,7 +32,6 @@
 .news__support-class
     display: flex
     margin-top: 92px
-    justify-content: start
     width: 100%
     margin-bottom: 30px
 
