--- a/4/4/src/components/filter.sass
+++ b/4/4/src/components/filter.sass
@@ -1,5 +1,5 @@
 .filters
-    height: 90px
+    height: 110px
     background-color: #fdf0c5
     border-radius: 10px 0px 0px 10px
     width: 100px
@@ -37,3 +37,12 @@
     width: 100px
     align-self: center
     padding-left: 40px
+
+.filters__reset
+    height: 20px
+    width: 70px
+    margin-top: 5px
+    margin-left: 15px
+    border-radius: 10px
+    background-color: #39752b50
+    border: 1px solid #003a0a98
