--- a/5/src/modules/coments.sass
+++ b/5/src/modules/coments.sass
@@ -8,8 +8,35 @@
     display: flex
     align-items: center
     justify-content: center
+    font-family: Roboto
+    font-style: normal
 
 .coments__form
     width: 1098px
     border-radius: 8px
     background: #ffffff
+
+.coment
+    padding: 0px 60px 0px 60px
+    margin-top: 20px
+    display: flex
+    flex-wrap: wrap
+
+.coment__email
+    font-weight: 300
+    margin-right: 10px
+    font-size: 24px
+    line-height: 28px
+    color: #2E2E2E
+
+.coment__title
+    font-size: 24px
+    line-height: 28px
+    color: #000000
+    flex-grow: 0
+
+.coment__body
+    margin-top: 10px
+    font-size: 24px
+    line-height: 28px
+    color: #000000
