no refactoring version

--- a/5/src/components/mini-user.sass
+++ b/5/src/components/mini-user.sass
@@ -44,3 +44,9 @@
     height: 50px
     background-position-x: 50%
     background-size: calc(100% + 1px)
+
+@media (max-width: 800px)
+    .mini-user
+        margin-left: 0px
+        margin-right: 0px
+        width: 320px
