--- a/5/src/layouts/layout.sass
+++ b/5/src/layouts/layout.sass
@@ -26,3 +26,10 @@
     font-size: 24px
     line-height: 28px
     color: #2E2E2E
+
+@media (max-width: 800px)
+    .layout
+        padding: 4px 7px 0px 17px
+    .layout__link
+        margin: 10px
+        font-size: 18px
