--- a/5/src/modules/home.sass
+++ b/5/src/modules/home.sass
@@ -27,6 +27,7 @@
     font-size: 36px
     line-height: 42px
     display: flex
+    text-align: center
     color: #DADADA
 
 .home__start
@@ -42,3 +43,16 @@
     text-transform: uppercase
     text-align: center
     color: #FFFFFF
+@media (max-width: 800px)
+    .home__logo
+        width: 90px
+        height: 150px
+        margin-top: 10px
+    .home__name
+        font-size: 64px
+    .home__slogan
+        font-size: 24px
+        margin-top: 20px
+
+    .home__start
+        margin-top: 20px
