--- a/5/src/components/post.sass
+++ b/5/src/components/post.sass
@@ -30,3 +30,17 @@
     font-size: 24px
     line-height: 28px
     color: #4D4D4D
+
+@media (max-width: 1200px)
+    .post
+        width: calc( 100% - 120px )
+
+@media (max-width: 500px)
+    .post__user-name
+        font-size: 18px
+    .post__title
+        font-size: 18px
+    .post__body
+        font-size: 18px
+    .post
+        width: calc( 100% - 60px )
