--- a/5/src/modules/users.sass
+++ b/5/src/modules/users.sass
@@ -26,3 +26,11 @@
     text-align: center
     margin-top: 10px
     margin-bottom: 15px
+@media (max-width: 1200px)
+    .users
+        width: 772px
+        margin-left: calc(50% - 386px)
+@media (max-width: 800px)
+    .users
+        width: 320px
+        margin-left: calc(50% - 160px)
