--- a/5/src/components/mini-user/mini-user.sass
+++ b/5/src/components/mini-user/mini-user.sass
@@ -13,6 +13,9 @@
     box-shadow: 2px 2px 16px rgba(46, 46, 46, 0.25)
     border-radius: 8px
 
+.mini-user:hover
+    box-shadow: 2px 2px 12px rgba(46, 46, 46, 0.55)
+
 .mini_user__avatar
     font-family: Roboto
     font-style: normal
@@ -39,7 +42,7 @@
 
 .mini-user__footer
     margin-top: 21px
-    background-image: url(../assets/user-f.png)
+    background-image: url(../../assets/user-f.png)
     width: 326px
     height: 50px
     background-position-x: 50%
