--- a/5/src/layouts/layout.sass
+++ b/5/src/layouts/layout.sass
@@ -27,6 +27,15 @@
     line-height: 28px
     color: #2E2E2E
 
+.layout__link:hover
+    box-shadow: 3px 3px 3px #bbbbbb
+
+.layout__link__chosen
+    background: url("../assets/el.png")
+    background-size: 7px
+    background-repeat: no-repeat
+    background-position: calc( 100% +  0px) 0px
+
 @media (max-width: 800px)
     .layout
         padding: 4px 7px 0px 17px
