--- a/5/src/modules/home-page/home.sass
+++ b/5/src/modules/home-page/home.sass
@@ -5,7 +5,7 @@
     width: 100%
     font-family: Roboto
     font-style: normal
-    background: url(../assets/home.png)
+    background: url(../../assets/home.png)
     background-size: cover
     height: calc(100vh - 80px)
 
@@ -13,7 +13,7 @@
     margin-top: 69px
     width: 180px
     height: 300px
-    background: url(../assets/logo.svg)
+    background: url(../../assets/logo.svg)
     background-size: cover
 
 .home__name
