--- a/5/src/components/post/post.sass
+++ b/5/src/components/post/post.sass
@@ -12,6 +12,9 @@
     flex-wrap: wrap
     align-items: flex-start
 
+.post:hover
+    box-shadow: 2px 2px 12px rgba(46, 46, 46, 0.55)
+
 .post__user-name
     margin-right: 10px
     font-weight: 500
