--- a/5/src/components/user/user.sass
+++ b/5/src/components/user/user.sass
@@ -43,7 +43,7 @@
     color: #2E2E2E
 
 .user__footer
-    background-image: url(../assets/user-f.png)
+    background-image: url(../../assets/user-f.png)
     width: 100%
     height: 50px
     border-radius: 0px 0px 8px 8px
